force-app/main/default/objects/Marketing_Sent_SMS__c/Marketing_Sent_SMS__c.object-meta.xml
<CustomObject>
    <description>Sent message from a marketing sms push</description>
    <label>Marketing Sent SMS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Sent SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Sent SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>