force-app/main/default/objects/Marketing_Sent_SMS__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that the message was sent to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Sent SMS</relationshipLabel>
    <relationshipName>Marketing_Sent_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>