force-app/main/default/objects/Marketing_Sent_SMS__c/fields/From_Phone__c.field-meta.xml
<CustomField>
    <fullName>From_Phone__c</fullName>
    <description>Phone number that the message was sent from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>From Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>