force-app/main/default/objects/Marketing_Sent_SMS__c/fields/Marketing_SMS_Push__c.field-meta.xml
<CustomField>
    <fullName>Marketing_SMS_Push__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Marketing sms push that the message belonged to.</description>
    <label>Marketing SMS Push</label>
    <referenceTo>Marketing_SMS_Push__c</referenceTo>
    <relationshipLabel>Marketing Sent SMS</relationshipLabel>
    <relationshipName>Marketing_Sent_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>