force-app/main/default/objects/Marketing_Sent_SMS__c/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <description>Phone number that the message was sent to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>To Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>